--- a/Battleships2/src/com/BattleShips/main/GUI.fxml
+++ b/Battleships2/src/com/BattleShips/main/GUI.fxml
@@ -30,6 +30,7 @@
                         <Button fx:id="readyBtn" minWidth="86.0" mnemonicParsing="false" text="Restart" />
                         <Button fx:id="rotateBtn" contentDisplay="CENTER" minWidth="86.0" mnemonicParsing="false" text="Rotate Ship" textAlignment="CENTER" />
                         <Button minWidth="86.0" mnemonicParsing="false" onAction="#DisplayBoard" text="DisplayBoard" />
+                        <Button fx:id="AIBoardbtn" minWidth="86.0" mnemonicParsing="false" onAction="#DisplayAIBoard" text="AI Board" />
                         <Button minWidth="86.0" mnemonicParsing="false" onAction="#DisplayShips" text="Ships Coord." />
                      </children>
                   </VBox>
